# icarus_data

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.hpp
examples/fetch_albums/: .fetch_albums.cpp.swp  fetch_albums.cpp
examples/fetch_songs/: CMakeLists.txt  fetch_songs.cpp
examples/fetch_users/: fetch_users.cpp
examples/update_users/: update_users.cpp
icarus_data/: CMakeLists.txt
icarus_data/include/icarus_data/: icarus_data.h
icarus_data/include/icarus_data/database/: album_repository.h  artist_repository.h  base_repository.h  cover_art_repository.h  genre_repository.h  repoository_utility.h  song_repository.h  token_repository.h  user_repository.h  year_repository.h
icarus_data/include/icarus_data/models/: auth.hpp  connection_string.hpp  music.hpp
icarus_data/include/icarus_data/types/: auth.hpp  music.hpp
include/icarus_data/: icarus_data.h
include/icarus_data/database/: album_repository.h  artist_repository.h  base_repository.h  cover_art_repository.h  genre_repository.h  song_repository.h  token_repository.h  user_repository.h  year_repository.h
include/icarus_data/models/: connection_string.hpp
src/icarus_data/: icarus_data.cpp
